@@ -1,6 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
-
+== 09/23/2014 ==
+Kayen: Spell recourse effects will now be applied AFTER the base spells effects have been applied (consistent with live).
+Kayen: SE_ApplySpell and SE_TriggerSpell will now be applied based on which effect slot they are used in (instead of always before all spell effects are checked).
+Note: If a spell has multiple SE_TriggerSpell effects within it. Only one will be able to trigger. (If you want multiple spells use SE_ApplySpell)
 
 == 09/22/2014 ==
 Akkadius: #resetaa now covers the function of #resetaa and #refundaa
@@ -8,7 +11,6 @@ Akkadius: #resetaa now covers the function of #resetaa and #refundaa
 Akkadius: Removed #refundaa
 Akkadius: Removed a lot of debug code for blob conversion
 Akkadius: Changed status logging for loads/saves to Debug category
-Kayen: Spell recourse effects / triggerable spell effects will now be applied AFTER the base spells effects have been applied (consistent with live)
 
 == 09/21/2014 == 
 Akkadius: Player Profile Blob to Database Conversion
